fix banner swiper text-align

--- a/src/assets/sass/_components/BannerSwiper.scss
+++ b/src/assets/sass/_components/BannerSwiper.scss
@@ -11,7 +11,7 @@
         // max-height: 36vh;
         // min-height: 28vh;
         height: auto;
-        text-align: cesnter;
+        text-align: center;
         font-size: 0px;
 
         a {
